Fix issue processwire/processwire-issues#513 datepicker z-index when near image field

--- a/wire/modules/Inputfield/InputfieldDatetime/InputfieldDatetime.scss
+++ b/wire/modules/Inputfield/InputfieldDatetime/InputfieldDatetime.scss
@@ -64,5 +64,8 @@ a.pw-ui-datepicker-trigger {
 	margin: 0 0 0 0.5em;
 }
 
-
+input.InputfieldDatetimeDatepicker {
+	position: relative;
+	z-index: 1;
+}
 
